showing images in popup and some actions

--- a/README
+++ b/README
@@ -1,2 +1,5 @@
 Create new websites by modifing existing ones!
+
+###detailed description
 Tomoder is a extention for tomodo.com.
+See how many people have modified a web site and create your own Mod is a click!
