remove styles and updated read me, and dev option for the compile script

--- a/README
+++ b/README
@@ -1,5 +1,17 @@
-Create new websites by modifing existing ones!
+###name
+TOMODO Explorer
+
+###description
+Modify existing websites, view sites modified by other and publish your creations. 
 
 ###detailed description
-Tomoder is a extention for tomodo.com.
-See how many people have modified a web site and create your own Mod is a click!
+TOMODO enables you to create new websites by modifying existing one. You can add features, change the UI, change the behavior and create mashups of existing websites. 
+TOMODO Explorer allows you to browse other users creations and create your own modifications for existing websites. 
+
+Access existing modifications
+- TOMODO Explorer will display a list of existing modification on every site you visit.
+
+Modify existing sites 
+-TOMODO Explorer allows you to modify existing websites, just hit "Mod This Site".
+
+For more information visit tomodo.com.
